documentando rota /api/signin
