# lib/todo_web/swagger/schema_definitions.ex
@@ -5,14 +5,20 @@ defmodule TodoWeb.Swagger.SchemaDefinitions do
 
   use PhoenixSwagger
 
+  alias TodoWeb.Swagger.AuthSchema
   alias TodoWeb.Swagger.ErrorSchema
   alias TodoWeb.Swagger.UserSchema
 
+  @doc """
+  Defines the schemas for the API documentation.
+  """
   def definitions do
     %{
       User: UserSchema.user_schema(),
       UserParams: UserSchema.user_params_schema(),
-      Error: ErrorSchema.error_schema()
+      Error: ErrorSchema.error_schema(),
+      SignIn: AuthSchema.sign_in_schema(),
+      SignInParams: AuthSchema.sign_in_params_schema()
     }
   end
 end
